[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Vighnesh Shenoy"]
description = "My solutions to Advent of Code 2022."
license = "MIT"
keywords = ["advent-of-code", "data-structures", "algorithms"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc"
path = "src/main.rs"

[lib]
name = "aoc"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
